# E-commerce-API

./: .dockerignore  .env.example  Dockerfile  LICENSE  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  pytest.ini  run.sh
src/authentication/: controller.py  serializer.py  urls.py  views.py
src/authentication/interfaces/services/: auth_service.py
src/authentication/services/: jwt_auth_service.py
src/backend/: settings.py  urls.py
src/backend/core/: enums.py
src/backend/core/permissions/: __init__.py
src/backend/core/services/auth/: base.py
src/backend/core/validators/: password.py
src/backend/settings/: __init__.py  base.py  development.py  production.py  test.py
src/orders/: models.py  serializer.py  views.py
src/orders/migrations/: 0001_initial.py
src/orders/strategy/cancel/: __init__.py  cancel_status.py  get_strategy.py  other_status.py  pending_status.py
src/products/: models.py  serializer.py  views.py
src/products/migrations/: 0001_initial.py  0002_product_stock.py
src/users/: admin.py  models.py  serializer.py  user_register_email_send.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_user_username.py  0004_alter_user_password.py
tests/: conftest.py
tests/authentication/: test_login.py  test_logout.py  test_refresh.py
tests/products/: test_create.py  test_delete.py  test_list.py  test_partial_update.py  test_read.py  test_total_update.py
tests/users/: test_create.py  test_delete.py  test_list.py  test_me.py  test_partial_update.py  test_read.py  test_total_update.py
(+3 files in other folders)
