[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Everaldo451"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
django = "^5.2.3"
drf-yasg = "^1.21.10"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
python-decouple = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
